                    Changes made to Pyjamas since 0.4
                    ---------------------------------

 * added none modal behaviour to DialogBox

 * fixed bug if mouse is moved too fast while dragging a dialog


                    Changes made to Pyjamas since 0.3
                    ---------------------------------

Enhancements

 * Added library/splitpanel.py and library/vertsplitpanel.py, along with
  examples/splitpanel.  NOTE: splitpanels should be in ui.

 * Changed ui.TabBar.insertTab() to allow widgets to be passed as well as text.

 * Added examples/tabpanelwidget

 * Added gtk_converter to the "contrib" directory (thanks to Jeremy)

 * Added library/decoratorpanel.py which includes DecoratorPanel,
   DecoratedTabPanel and DecoratedTabBar.  NOTE: these classes should
   be in ui.

 * Added examples/slideshow

 * Added support for slicing with negative numbers.

 * Added examples/jsobject

 * Added support for a debugging mode, which can be turned on by include a "-d"
  command-line option when calling build.py.  With this option turned on, each
  statement in your Python code is surrounded by a try...except statement that
  displays an alert if an exception occurs.  The alert message contains the
  original Python source text, the line number in your Python source file
  where the error occurred, and the details of the Javscript error which
  occurred.  This should greatly simplify debugging your Pyjamas code.

 * Issue #75: Added support for "is not None" syntax.

 * Issue #85: Implemented the repr() built-in function.

 * Issue #93: Implemented dict.items().

 * Issue #95: Implemented Window.prompt().

 * Issue #100: Added a setPadding() method to ui.CellPanel.

 * Issue #103: Implemented the enumerate() built-in function.

 * Issue #104: Added the ability to assign to a list of variables, for example:
  x,y = self.method()

 * Issue #105: Implemented the min() and max() built-in functions.
