@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.4
                     ---------------------------------
 
+ * implemented 'setattr'
+
  * added none modal behaviour to DialogBox
 
  * fixed bug if mouse is moved too fast while dragging a dialog
